ui/flutter/lib/core/ffi/libgopeed_bind.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings to gopeed library.
class LibgopeedBind {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LibgopeedBind(ffi.DynamicLibrary dynamicLibrary) : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LibgopeedBind.fromLookup(ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup)
    : _lookup = lookup;

  Start_return Start(ffi.Pointer<ffi.Char> cfg) {
    return _Start(cfg);
  }

  late final _StartPtr = _lookup<ffi.NativeFunction<Start_return Function(ffi.Pointer<ffi.Char>)>>('Start');
  late final _Start = _StartPtr.asFunction<Start_return Function(ffi.Pointer<ffi.Char>)>();

  void Stop() {
    return _Stop();
  }

  late final _StopPtr = _lookup<ffi.NativeFunction<ffi.Void Function()>>('Stop');
  late final _Stop = _StopPtr.asFunction<void Function()>();
}

final class Start_return extends ffi.Struct {
  @ffi.LongLong()
  external int r0;

  external ffi.Pointer<ffi.Char> r1;
}
